Started work on making Entity have scene and model mats.
Created transformation matrix class to provide utility to matricies.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="visualisation\Material.h" />
     <ClInclude Include="visualisation\model\SceneGraphJoint.h" />
     <ClInclude Include="visualisation\model\SceneGraphItem.h" />
+    <ClInclude Include="visualisation\model\TransformationMatrix.h" />
     <ClInclude Include="visualisation\multipass\BackBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBufferAttachment.h" />
