--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClInclude Include="visualisation\TowerCrane.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="visualisation\model\TransformationMatrix.h">
+      <Filter>Header Files\Visualisation\Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="EntityScene.cu">
