Progressing the crane example.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="visualisation\Material.cpp" />
     <ClCompile Include="visualisation\model\SceneGraphJoint.cpp" />
     <ClCompile Include="visualisation\model\SceneGraphItem.cpp" />
+    <ClCompile Include="visualisation\model\SlideJoint.cpp" />
     <ClCompile Include="visualisation\multipass\BackBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\FrameBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\MultiPassScene.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="visualisation\Material.h" />
     <ClInclude Include="visualisation\model\SceneGraphJoint.h" />
     <ClInclude Include="visualisation\model\SceneGraphItem.h" />
+    <ClInclude Include="visualisation\model\SlideJoint.h" />
     <ClInclude Include="visualisation\model\TransformationMatrix.h" />
     <ClInclude Include="visualisation\multipass\BackBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBuffer.h" />
