--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClCompile Include="visualisation\TowerCrane.cpp">
       <Filter>Source Files\Visualisation</Filter>
     </ClCompile>
+    <ClCompile Include="visualisation\model\SlideJoint.cpp">
+      <Filter>Source Files\Visualisation\Model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="visualisation\util\cuda.cuh">
@@ -298,6 +301,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="visualisation\model\TransformationMatrix.h">
+      <Filter>Header Files\Visualisation\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\model\SlideJoint.h">
       <Filter>Header Files\Visualisation\Model</Filter>
     </ClInclude>
   </ItemGroup>
