--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="visualisation\Axis.cpp" />
     <ClCompile Include="visualisation\BasicScene.cpp" />
     <ClCompile Include="visualisation\Camera.cpp" />
+    <ClCompile Include="visualisation\Draw.cpp" />
     <ClCompile Include="visualisation\Entity.cpp" />
     <ClCompile Include="visualisation\HUD.cpp" />
     <ClCompile Include="visualisation\Material.cpp" />
@@ -130,6 +131,7 @@
     <ClInclude Include="visualisation\Axis.h" />
     <ClInclude Include="visualisation\BasicScene.h" />
     <ClInclude Include="visualisation\Camera.h" />
+    <ClInclude Include="visualisation\Draw.h" />
     <ClInclude Include="visualisation\Entity.h" />
     <ClInclude Include="visualisation\HUD.h" />
     <ClInclude Include="visualisation\interface\FBuffer.h" />
@@ -162,6 +164,7 @@
     <ClInclude Include="visualisation\texture\TextureBuffer.h" />
     <ClInclude Include="visualisation\texture\TextureCubeMap.h" />
     <ClInclude Include="visualisation\util\GLcheck.h" />
+    <ClInclude Include="visualisation\util\StringUtils.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
