Added directional light.
Directional light now roughly matches suns location in Scene0 skybox.

Attempted to fix spotlight by negating spotDirection in the angle check, however this caused everything to be out of bounds, rather than everything in bounds.

Did notice that I was passing degrees to cos, which uses radians, however this hasn't magically fixed spotlights either.

--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -193,6 +193,9 @@
     <None Include="visualisation\shader\lights\SpotLight.imp">
       <Filter>Source Files\Visualisation\Shader\Lights</Filter>
     </None>
+    <None Include="visualisation\shader\lights\DirectionalLight.imp">
+      <Filter>Source Files\Visualisation\Shader\Lights</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="visualisation\Axis.h">
@@ -342,11 +345,14 @@
     <ClInclude Include="visualisation\shader\lights\LightsBuffer.h">
       <Filter>Header Files\Visualisation\Shader\Lights</Filter>
     </ClInclude>
-    <ClInclude Include="visualisation\shader\lights\Spotlight.h">
-      <Filter>Header Files\Visualisation\Shader\Lights</Filter>
-    </ClInclude>
     <ClInclude Include="visualisation\shader\ShadersVec.h">
       <Filter>Header Files\Visualisation\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\shader\lights\DirectionalLight.h">
+      <Filter>Header Files\Visualisation\Shader\Lights</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\shader\lights\SpotLight.h">
+      <Filter>Header Files\Visualisation\Shader\Lights</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
