--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -111,6 +111,7 @@
     <ClCompile Include="visualisation\shader\ComputeShader.cpp" />
     <ClCompile Include="visualisation\shader\GaussianBlur.cpp" />
     <ClCompile Include="visualisation\shader\lights\LightsBuffer.cpp" />
+    <None Include="visualisation\shader\lights\DirectionalLight.imp" />
     <None Include="visualisation\shader\lights\PointLight.imp">
       <FileType>CppCode</FileType>
     </None>
@@ -170,9 +171,10 @@
     <ClInclude Include="visualisation\shader\buffer\UniformBuffer.h" />
     <ClInclude Include="visualisation\shader\ComputeShader.h" />
     <ClInclude Include="visualisation\shader\GaussianBlur.h" />
+    <ClInclude Include="visualisation\shader\lights\DirectionalLight.h" />
     <ClInclude Include="visualisation\shader\lights\LightsBuffer.h" />
     <ClInclude Include="visualisation\shader\lights\PointLight.h" />
-    <ClInclude Include="visualisation\shader\lights\Spotlight.h" />
+    <ClInclude Include="visualisation\shader\lights\SpotLight.h" />
     <ClInclude Include="visualisation\shader\ShaderCore.h" />
     <ClInclude Include="visualisation\shader\ShaderHeader.h" />
     <ClInclude Include="visualisation\shader\Shaders.h" />
