Added (untested) support to MultiPassScene.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="visualisation\model\ModelNode.cpp" />
     <ClCompile Include="visualisation\multipass\BackBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\CubeMapFrameBuffer.cpp" />
+    <ClCompile Include="visualisation\multipass\CubeMapPass.cpp" />
     <ClCompile Include="visualisation\multipass\FrameBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\MultiPassScene.cpp" />
     <ClCompile Include="visualisation\multipass\RenderBuffer.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="visualisation\model\Model_assimpUtils.h" />
     <ClInclude Include="visualisation\multipass\BackBuffer.h" />
     <ClInclude Include="visualisation\multipass\CubeMapFrameBuffer.h" />
+    <ClInclude Include="visualisation\multipass\CubeMapPass.h" />
     <ClInclude Include="visualisation\multipass\FrameBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBufferAttachment.h" />
     <ClInclude Include="visualisation\multipass\MultiPassScene.h" />
