--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClCompile Include="visualisation\multipass\CubeMapFrameBuffer.cpp">
       <Filter>Source Files\Visualisation\MultiPass</Filter>
     </ClCompile>
+    <ClCompile Include="visualisation\multipass\CubeMapPass.cpp">
+      <Filter>Source Files\Visualisation\MultiPass</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="visualisation\util\cuda.cuh">
@@ -370,6 +373,9 @@
       <Filter>Header Files\Visualisation\Shader\Lights</Filter>
     </ClInclude>
     <ClInclude Include="visualisation\multipass\CubeMapFrameBuffer.h">
+      <Filter>Header Files\Visualisation\MultiPass</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\multipass\CubeMapPass.h">
       <Filter>Header Files\Visualisation\MultiPass</Filter>
     </ClInclude>
   </ItemGroup>
