--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -94,6 +94,9 @@
     <ClCompile Include="visualisation\Draw.cpp" />
     <ClCompile Include="visualisation\Entity.cpp" />
     <ClCompile Include="visualisation\HUD.cpp" />
+    <ClCompile Include="visualisation\model\SceneGraphJoint.cpp" />
+    <ClCompile Include="visualisation\model\SceneGraphItem.cpp" />
+    <ClCompile Include="visualisation\model\SlideJoint.cpp" />
     <ClCompile Include="visualisation\model\Animation.cpp" />
     <ClCompile Include="visualisation\model\Material.cpp" />
     <ClCompile Include="visualisation\model\Mesh.cpp" />
@@ -130,6 +133,7 @@
     <ClCompile Include="visualisation\texture\Texture2D_Multisample.cpp" />
     <ClCompile Include="visualisation\texture\TextureBuffer.cu.cpp" />
     <ClCompile Include="visualisation\texture\TextureCubeMap.cpp" />
+    <ClCompile Include="visualisation\TowerCrane.cpp" />
     <ClCompile Include="visualisation\util\Optimus.cpp" />
     <ClCompile Include="visualisation\Visualisation.cpp" />
   </ItemGroup>
@@ -155,6 +159,10 @@
     <ClInclude Include="visualisation\interface\RenderTarget.h" />
     <ClInclude Include="visualisation\interface\Scene.h" />
     <ClInclude Include="visualisation\interface\Viewport.h" />
+    <ClInclude Include="visualisation\model\SceneGraphJoint.h" />
+    <ClInclude Include="visualisation\model\SceneGraphItem.h" />
+    <ClInclude Include="visualisation\model\SlideJoint.h" />
+    <ClInclude Include="visualisation\model\TransformationMatrix.h" />
     <ClInclude Include="visualisation\model\Animation.h" />
     <ClInclude Include="visualisation\model\BoundingBox.h" />
     <ClInclude Include="visualisation\model\Material.h" />
@@ -192,6 +200,7 @@
     <ClInclude Include="visualisation\texture\Texture2D_Multisample.h" />
     <ClInclude Include="visualisation\texture\TextureBuffer.h" />
     <ClInclude Include="visualisation\texture\TextureCubeMap.h" />
+    <ClInclude Include="visualisation\TowerCrane.h" />
     <ClInclude Include="visualisation\util\GLcheck.h" />
     <ClInclude Include="visualisation\util\StringUtils.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
